# aer

./: .gitignore  INSTALL.rst  MODULES.rst  README.md  pyproject.toml  torch_cuda.txt
aer/: __init__.py
aer/accuracy/: __init__.py  _comparison.py  _metrics.py  _save.py
aer/accuracy/tests/: test_comparison.py  test_metrics.py  test_save.py
aer/aidge/: __init__.py  _aidge_io.py  _aidge_tk.py
aer/aidge/tests/: test_aidge_io.py  test_aidge_tk.py
aer/data_tk/: __init__.py  _data_parser.py  _scaling.py  _windows.py
aer/data_tk/tests/: test_data_parser.py  test_scaling.py  test_windows.py
aer/datasets/: __init__.py  mivia_loader.py
aer/datasets/MIVIA_AE_example/: gedit
aer/datasets/tests/: test_mivia_loader.py
aer/display/: __init__.py  _hits_bars.py  _signals.py
aer/display/tests/: test_hits_bars.py  test_signals.py
aer/filters/: __init__.py  _filterbank.py  _filters.py
aer/filters/tests/: base_signal.py  test_filterbank.py  test_filters.py
aer/gui/: __init__.py  _funcanimation.py  _gui_tk.py
aer/gui/tests/: test_1plot.py  test_2plots.py  test_funcanimation.py  test_gui_tk.py
aer/layers/: __init__.py  _delayer.py  _layers.py  _sinclayer.py
aer/layers/tests/: test_delayer.py  test_layers.py  test_sinclayer.py
aer/models/: __basenet.py  __init__.py  _convnet.py  _denet.py  _sincnet.py
aer/models/tests/: test_convnet.py  test_denet_chks.py  test_denet_seqs.py  test_main.py  test_sincnet.py
aer/models_tk/: __init__.py  _models_mivia.py  _models_tk.py
aer/models_tk/tests/: test_models_mivia.py  test_models_tk.py
aer/onnx/: __init__.py  _onnx.py
aer/onnx/tests/: test_onnx.py
aer/plot/: __init__.py  _core_plot.py  _decorations.py  _plot.py
aer/spectrum/: __init__.py  _cepstrum.py  _spectrum.py  _stft.py
aer/tools/: _tools.py
scripts/: bench_0.sh  bench_1.sh  bench_2.sh  bench_comp.py  bench_comp_plot.py  bench_plot.py  bench_train.py  illustration.py  main.py  model_onnx.py  model_plot.py  model_train.py
(+7 files in other folders)
