[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'aer'
dynamic = ['version']   # Dynamic versioning from project
#version = '1.0'        # Static versioning
description = "Audio Event Recognition"
#long_description=long_description
#readme = 'README.md'
readme = {file = 'README.md', content-type = 'text/markdown'}
authors = [
    {name = "Dylan MOLINIE"},
    {email = "dylan.molinie@gmx.fr"}
]
license = 'GPL-3.0-or-later'
license-files = ['LICENSE.txt']
requires-python = '>= 3.10'
dependencies = [
    'numpy',
    'scipy',
    'pillow',
    'matplotlib',
    'onnx',
    'onnxruntime',
] # + standard 'os', 'time', 'csv', 'xml' & 'shelve'

[tool.setuptools.dynamic]
# Retrieve the 'version' from the project '__init__' file
version = {attr = 'aer.__version__'}

[project.optional-dependencies]
# For training building & training Torch models
torch = ['torch', 'torchinfo']
# For displaying example GUI
gui = ['sounddevice']  # + torch + standard 'tkinter'
# For using the tools related to the Aidge project
aidge = [
    'requests',
#    # May be listed when the Aidge project is officially released
#    'aidge_core',
#    'aidge_backend_cpu',
#    'aidge_onnx',
#    'aidge_export_cpp'
] # + standard 'io' & 'base64'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['.']   # Current folder by default
include = ['*'] # All packages by default

[tool.setuptools.package-data]
# To include all the 'xml' & 'wav' files, uncomment the following line
#"*" = ['*.xml', '*.wav']
# To include only the MIVIA AE example data files, use the following lines
"aer.datasets.MIVIA_AE_example.training" = ['*.xml']
"aer.datasets.MIVIA_AE_example.training.sounds" = ['*.wav']
"aer.datasets.MIVIA_AE_example.testing" = ['*.xml']
"aer.datasets.MIVIA_AE_example.testing.sounds" = ['*.wav']

